k8s-behaviour/manifests/dangling-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dangling-resources
---
apiVersion: v1
kind: Pod
metadata:
  name: dangling-resources
  namespace: dangling-resources
  finalizers:
  - k8splayground.pliu.github.com/dangling-resources
spec:
  containers:
  - name: dangling-resources
    image: busybox:1.31
    command: ["/bin/sh", "-c", "while :; do echo '.'; sleep 30 ; done"]
  terminationGracePeriodSeconds: 5
