k8s-behaviour/manifests/network-policy-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-policy-test
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    network-policy-test: "true"
  namespace: network-policy-test
spec:
  containers:
  - name: pod1
    image: curl:0.0.1
    command: ["/bin/sh", "-c", "while :; do echo '.'; sleep 30 ; done"]
  terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    network-policy-test: "false"
  namespace: network-policy-test
spec:
  containers:
  - name: pod2
    image: curl:0.0.1
    command: ["/bin/sh", "-c", "while :; do echo '.'; sleep 30 ; done"]
  terminationGracePeriodSeconds: 5
