k8s-behaviour/manifests/global-allow-some.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: selective-allow-some
  namespace: network-policy-test
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 142.251.32.110/32
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mock-server
      namespaceSelector: {}
