k8s-behaviour/manifests/global-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: global-deny-all
  namespace: network-policy-test
spec:
  podSelector: {}
  policyTypes:
  - Egress
