k8s-behaviour/manifests/pod-specific-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-specific-ingress
  namespace: default
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-test
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mock-server
  policyTypes:
  - Ingress
