k8s-behaviour/manifests/selective-deny-some.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: selective-deny-some
  namespace: network-policy-test
spec:
  podSelector:
    matchLabels:
      network-policy-test: "true"
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 142.251.32.110/32
        - 192.168.45.65/32   # replace with the IP of mock-server
